[project]
name = "genodebuildtool"
version = "0.0.1"
authors = [
  { name="Tomasz Gajewski", email="tomga@wp.pl" },
]
description = "Build Tools for Genode"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tomga/genodebuildtool"
Issues = "https://github.com/tomga/genodebuildtool/issues"

[tool.pytest.ini_options]
typeguard-packages = """
gscons"""
typeguard-debug-instrumentation = true
typeguard-typecheck-fail-callback = "mypackage:failcallback"
typeguard-forward-ref-policy = "ERROR"
typeguard-collection-check-strategy = "ALL_ITEMS"
addopts = [
    "--import-mode=importlib",
]
